# automl-docker

./: .dockerignore  Dockerfile  Dockerfile_reqs  README.md  packages  requirements.txt  requirements_ag.in  requirements_ag.txt  requirements_askl.in  requirements_askl.txt
workdir/: .bash_history  CMakeLists.txt  config.json  datasets.py  etahml.py  lims.json  main.cpp  optimization.py  plots.py  selection.json
workdir/appconfig/: __init__.py
workdir/datasets/: __init__.py
workdir/optimization/: __init__.py  autogluon.py  autosklearn.py  optuna.py  random.py  tpot.py
workdir/plots/: __init__.py
